# pxsl-tools

./: .gitignore  ChangeLog  GetInput.hs  LICENSE  Makefile  PxsltElementDefaults.hs  PxsltFormat.hs  PxsltMacros.hs  PxsltParserTreeTransforms.hs  README  TODO  pxsl-tools.cabal  pxsl-tools.spec  pxsl-tools.spec.in  pxslcc.cabal  pxslcc.hs  text-to-html.pl  xsl2pxsl.xsl
examples/: xsl-menus-w-macros.pxsl
src/: PxsltMacros.hs  PxsltParser.hs  PxsltParserTerms.hs  UTF8.hs  XmlString.hs
