Name:                pxsl-tools
Homepage:            http://community.moertel.com/ss/space/PXSL
Version:             1.0.1
Stability:           stable
License:             GPL
License-file:        LICENSE
Author:              Tom Moertel <tom@moertel.com>
Maintainer:          Tom Moertel <tom@moertel.com>
Copyright:           2003-2008 Thomas G. Moertel <tom@moertel.com>
Category:            XML
Build-type:          Simple
Build-Depends:       base, mtl >= 1.0, parsec >= 2.0, containers
Synopsis:            Parsimonious XML Shorthand Language--to-XML compiler
Description:
  The package contains the pxslcc compiler, which converts
  Parsimonious XML Shorthand Language (PXSL) into XML.  PXSL ("pixel")
  is a convenient shorthand for writing markup-heavy XML documents.
  It provides XML authors and programmers with a simple, concise
  syntax that they can use to create XML documents. For more advanced
  users, PXSL offers customizable shortcuts and sophisticated
  refactoring tools like functional macros that can markedly reduce
  the size and complexity of markup-dense XML documents.

Cabal-version: >= 1.2
extra-source-files:
    src/GetInput.hs
    src/PxsltElementDefaults.hs
    src/PxsltFormat.hs
    src/PxsltMacros.hs
    src/PxsltParser.hs
    src/PxsltParserTerms.hs
    src/PxsltParserTreeTransforms.hs
    src/UTF8.hs
    src/XmlString.hs

data-files:
    README
    README.html

Executable:          pxslcc
Main-is:             pxslcc.hs
ghc-options:         -O2
hs-source-dirs:      src
