Name:                pxslcc
Homepage:            http://community.moertel.com/ss/space/PXSL
Version:             1.0
Description:         Parsimonious XML Shorthand Language--to-XML compiler
License:             GPL
License-file:        LICENSE
Author:              Tom Moertel
Maintainer:          tom@moertel.com
Build-Depends:       base, mtl >= 1.0, parsec >= 2.0

Executable:          pxslcc
Main-is:             pxslcc.hs
ghc-options:         -O2
hs-source-dirs:      src
